--- a/default.properties
+++ b/default.properties
@@ -68,3 +68,8 @@ jasmin.file = jasminclasses-2.4.0.jar
 
 # name of the file containing the polyglot library (precompiler only)
 polyglot.file = polyglot-1.3.3.jar
+
+# testing libraries
+junit.file = junit-4.11.jar
+mtc.file = MultithreadedTC-1.01.jar
+hamcrest.file = hamcrest-core-1.3.jar
