--- a/.classpath
+++ b/.classpath
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="src" path="src"/>
+	<classpathentry excluding="whatever.aj|whatever.aj" kind="src" path="src"/>
 	<classpathentry kind="src" path="test"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="lib" path="lib/hamcrest-core-1.3.jar"/>
-	<classpathentry kind="lib" path="lib/MultithreadedTC-1.01.jar"/>
+	<classpathentry kind="lib" path="lib/MultithreadedTC-1.01.jar" sourcepath="/opt/MultithreadedTC-1.01-source.zip"/>
 	<classpathentry kind="lib" path="lib/cglib-nodep-2.2.jar"/>
+	<classpathentry kind="lib" path="lib/commons-lang3-3.4.jar" sourcepath="/opt/commons-lang/src"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
